@startuml

hide methods
left to right direction
skinparam classAttributeIconSize 0


class Containers {
-x
-y
-z
-containerNumber
-checkDigit
-isoCode
-width
-height
-length
-payLoad
-tare
-gross
}

class CargoManifest {
-containerNumber
}

class Truck {

}

class Warehouse {
-identification
-name
}

Containers "1..*"--"1..*" CargoManifest: relate >
Containers "0..*"--"1" Warehouse: store >

Truck "1"--"1..*" Containers : transport >
Truck "0..*"--"1" Warehouse: park in >

CargoManifest "*" -- "1..*" Warehouse : deliver >


@enduml